kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gamestore
  labels:
    name: gamestore
